--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
       <h3>Using Fetch!</h3>
     </header>
     <main>
-      <div>
-        <button id="button">Fetch My Shit</button>
-      </div>
+        <button id="button">Get me some dogs</button>
+        <div id="response"></div>
     </main>
     <script src="app.js"></script>
   </body>
